--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,21 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>2.0.2.RELEASE</version>
 		</dependency>
-
+    	<!-- Database layer dependencies -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+		<!-- JSR-303 validator -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>4.2.0.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
