--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>2.0.2.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.5</version>
+		</dependency>
     	<!-- Database layer dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
